fix project module overflow-y glitch

--- a/styles/ProjectModule.module.scss
+++ b/styles/ProjectModule.module.scss
@@ -23,7 +23,8 @@
     border-radius: 4px;
     background-color: $hub-gray;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-    overflow: auto;
+    
+    overflow-y: hidden;
     cursor: pointer;
 }
 
